--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Card Game - Lobby</title>
-    <link rel="stylesheet" href="css/lobby.css">
+    <link rel="stylesheet" href="./css/lobby.css">
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 </head>
 <body>
@@ -44,8 +44,7 @@
         </div>
     </div>
 
-        <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-        <script src="js/supabase.js"></script>
-        <script src="js/lobby.js"></script>
+    <script src="./js/supabase.js"></script>
+    <script src="./js/lobby.js"></script>
 </body>
 </html>
