--- a/game.html
+++ b/game.html
@@ -100,7 +100,8 @@
         <button onclick="startGame()" class="btn-start">🚀 Start Game</button>
     </div>
 
-    <script src="js/supabase.js"></script>
-    <script src="js/game.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+<script src="js/supabase.js"></script>
+<script src="js/game.js"></script>
 </body>
 </html>
