Primera version jugable creo

--- a/game.html
+++ b/game.html
@@ -89,6 +89,10 @@
         <h3>Players (0/5)</h3>
         <ul id="playersUl"></ul>
     </div>
+        <div id="scoreboard" class="scoreboard">
+        <h3>Scores</h3>
+        <div class="score-row"><span>Waiting for game...</span></div>
+    </div>
     
     <!-- Chat Section -->
     <div class="chat-container">
