--- a/game.html
+++ b/game.html
@@ -73,14 +73,9 @@
         <!-- Player Hand (Bottom - Your cards) -->
         <div class="player-hand" id="playerHand">
             <div class="hand-container">
-                <!-- Your cards appear here -->
-            </div>
-            <div class="controls" id="controls">
-                <button class="btn-action" onclick="gameAction('check')">Check</button>
-                <button class="btn-action" onclick="gameAction('call')">Call</button>
-                <button class="btn-action" onclick="gameAction('raise')">Raise</button>
-                <button class="btn-action danger" onclick="gameAction('fold')">Fold</button>
-            </div>
+        <div class="game-info" id="gameInfo">
+            <div class="phase-indicator" id="phaseIndicator">Waiting for host...</div>
+            <div class="current-triunfo" id="currentTriunfo"></div>
         </div>
 
 <!-- Side Panel with Chat -->
