--- a/game.html
+++ b/game.html
@@ -110,8 +110,6 @@
         </div>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-    <script src="js/supabase.js"></script>
-    <script src="js/game.js"></script>
+<script type="module" src="js/game.js"></script>
 </body>
 </html>
