--- a/game.html
+++ b/game.html
@@ -5,12 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>El Triunfo - Card Game</title>
     <link rel="stylesheet" href="css/game.css">
+    <!-- Load Supabase first as regular script -->
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+    <script src="js/supabase.js"></script>
 </head>
 <body>
     <div class="game-wrapper">
         <!-- Host Controls -->
         <div class="host-controls" id="hostControls" style="display: none;">
-            <button onclick="startNewSet()" class="btn-start">🚀 Start Game</button>
+            <button class="btn-start" id="startBtn">🚀 Start Game</button>
         </div>
 
         <!-- Top Bar -->
@@ -111,7 +114,6 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-    <script src="js/supabase.js"></script>
- <script type="module" src="js/game.js"></script>
+    <script type="module" src="js/game.js"></script>
 </body>
 </html>
