--- a/game.html
+++ b/game.html
@@ -113,7 +113,7 @@
         </div>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-    <script type="module" src="js/game.js"></script>
+    <!-- Load game as regular script (not module) -->
+    <script src="js/game.js"></script>
 </body>
 </html>
